--- a/stadium/static/css/base.css
+++ b/stadium/static/css/base.css
@@ -8,8 +8,7 @@ body{
 }
 
 .navbar {
-  border: 1px solid black;
-  background-color: #0d6efd;
+  background-color: #5cdf88;
 
 }
 
@@ -34,16 +33,18 @@ body{
 
 .modal-header {
   width: 100%;
-  background-color: #0d6efd;
+  background-color: #5cdf88;
   color: white;
 }
 
 .modal-footer {
   display: flex;
   justify-content: space-between;
+
 }
 a {
   text-decoration: none;
+  color: #5cdf88;
 }
 a:hover {
   color: black;
@@ -74,12 +75,12 @@ form {
 
 section{
   display: flex;
-  border: 1px solid black;
+
   height: auto;
 }
 
 .sidebar {
-  border-right: 1px solid black;
+
 }
 /* Fixed sidenav, full height */
 .sidenav {
@@ -122,7 +123,7 @@ section{
 
 /* Add an active class to the active dropdown button */
 .active {
-  /* background-color: black; */
+  background-color: cyan;
   /* color: white; */
 }
 
@@ -153,5 +154,5 @@ section{
 }
 
 .field-name:hover {
-    background: #0d6efd;
+    background: #5cdf88;
 }
