--- a/stadium/static/css/createStadium.css
+++ b/stadium/static/css/createStadium.css
@@ -25,7 +25,7 @@ button {
     align-items: center;
 }
 
-.alert-primary {
+.alert-success {
     width: 80%;
     text-align: center;
     font-size: 30px;
