--- a/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
+++ b/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
@@ -56,7 +56,7 @@
                 {% for hidden in form.hidden_fields %}
                 {{ hidden }}
                 {% endfor %}
-                <tr>
+                <tr class="time-frames">
                     <td>{{ form.time_frame }}
                     </td>
                     <td>
