--- a/stadium/book_stadium/templates/book_stadium/owner.html
+++ b/stadium/book_stadium/templates/book_stadium/owner.html
@@ -34,8 +34,9 @@
                         {% if users.da_duyet %}
                         <p>Đã duyệt</p>
                         {% else %}
-                        <form action="">
-                            <input type="submit" value="Duyệt">
+                        <form method="POST" action="{% url 'accepted' users.order_id %}">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-success" value="Duyệt">
                         </form>
                         {% endif %}
                     {% endfor %}
@@ -46,56 +47,6 @@
     </table>
 {% endfor %}
 
-
-
-
-
-
-<!-- {% for orders in total_orders %}
-    {% for order in orders %}
-        {% if not order.is_accepted %}
-            <div class="card" style="width: 18rem;">
-                <div class="card-body shadow">
-                    <form action="{% url 'accepted' order.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-group">
-                        <label for="exampleInputEmail1">Người đặt</label>
-                        <input type="text" class="form-control" name="username_order" value="{{order.user}}">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Khung giờ</label>
-                            <input type="text" class="form-control" name="time_frame" value="{{order.stadium_time_frame}}">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Sân số</label>
-                            <input type="text" class="form-control" name="field_number" value="{{order.field_number}}">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Ngày đặt</label>
-                            <input type="text" class="form-control" name="order_datetime" value="{{order.order_datetime}}">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Số điện thoại</label>
-                            <input type="text" class="form-control" name="phone_number" value="{{order.user.phone_number}}">
-                        </div>
-                        {% if not user.is_authenticated %}
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Tên khách hàng</label>
-                            <input type="text" class="form-control" name="name_customer" value="{{order.user}}">
-                        </div>
-                        {% endif %}
-
-                        <button type="submit" class="btn btn-primary">Chấp nhận</button>
-                    </form>
-                </div>
-            </div>
-        {% endif %}
-    {% endfor %}
-{% endfor %} -->
 {% endblock %}
 {% block javascript %}
 <script src="{% static 'js/owner.js' %}" type="text/javascript"></script>
