--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -72,7 +72,7 @@
           </button>
           <div class="dropdown-container" style="display: block;">
             {% for field in fields %}
-            <a class="field-name" href="{% url 'owner' %}">{{field.name}}</a>
+            <a class="field-name" href="{% url 'owner' field.id %}">{{field.name}}</a>
             {% endfor %}
           </div>
         </div>
@@ -138,7 +138,7 @@
     </div>
   </div>
 
-  <div class="modal fade " id="register" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade " id="register" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
