--- a/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
+++ b/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="{% static 'css/stadiumDetail.css' %}">
 {% endblock %}
 {% block content %}
+{% for message in messages %}
+    <div class="alert alert-success" role="alert">
+        {{message}}
+    </div>
+{% endfor %}
 <div class="stadium-detail">
     <h1 class="stadium-name pt-2">{{ stadium.name }}</h1>
     <h2 class="col-5">
@@ -14,12 +19,6 @@
     </h2>
     <img class="stadium-img" src="{{stadium.image.url}}" alt="stadium-image">
     <div class="form-info">
-        <!-- <div class="info">
-                <h2 class="col-5">
-                    Thông tin chung
-                </h2>
-                <img class="col-7" src="{{stadium.image.url}}" alt="stadium-image" height="150px" width="400px">
-            </div> -->
         <form action="" method="POST" class="stadium-form-detail" enctype="multipart/form-data">
             {% csrf_token %}
             {% for input in formDetail.visible_fields %}
