show data on template book_stadium and paginate

--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-1">
     <header>
       <div class="navbar">
         <img class='logo' src="https://varunit.com/wp-content/uploads/2018/09/varunit-logo-square-black-bg.png" alt="">
